# tarifa_domestica_mensual

./: AGENTS.md  COTIZACION SISTEMA FOTOVOLTAICO MENSUAL.xlsm  tarifa_domestica_mensual.py
tarifa_domestica_mensual/: Makefile  README.md  pyproject.toml
tarifa_domestica_mensual/docs/: mkdocs.yml
tarifa_domestica_mensual/docs/docs/: index.md
tarifa_domestica_mensual/tarifa_domestica_mensual/: __init__.py  dataset.py  features.py  plots.py
tarifa_domestica_mensual/tarifa_domestica_mensual/modeling/: predict.py  train.py
